crates/ohno_macros/src/derive_error/snapshots/ohno_macros__derive_error__from_impls__tests__named_struct_default_fields.snap
---
source: crates/ohno_macros/src/derive_error/from_impls.rs
expression: formatted
---
impl From<std::io::Error> for SimpleNamed {
    fn from(error: std::io::Error) -> Self {
        Self {
            info: Default::default(),
            source: ohno::OhnoCoreBuilder::new().error(error).build(),
        }
    }
}
