crates/ohno_macros/src/derive_error/snapshots/ohno_macros__derive_error__from_impls__tests__named_struct_with_custom_field_expression.snap
---
source: crates/ohno_macros/src/derive_error/from_impls.rs
expression: formatted
---
impl From<std::io::Error> for NamedErr {
    fn from(error: std::io::Error) -> Self {
        Self {
            detail: String::from("custom"),
            source: ohno::OhnoCoreBuilder::new().error(error).build(),
        }
    }
}
