crates/ohno_macros/src/derive_error/snapshots/ohno_macros__derive_error__from_impls__tests__named_struct_with_generics.snap
---
source: crates/ohno_macros/src/derive_error/from_impls.rs
expression: formatted
---
impl<T: std::fmt::Debug> From<std::io::Error> for MyError<T> {
    fn from(error: std::io::Error) -> Self {
        Self {
            other: Default::default(),
            source: ohno::OhnoCoreBuilder::new().error(error).build(),
        }
    }
}
