crates/ohno_macros/src/derive_error/snapshots/ohno_macros__derive_error__from_impls__tests__tuple_struct_error_field_at_different_positions.snap
---
source: crates/ohno_macros/src/derive_error/from_impls.rs
expression: formatted
---
impl From<std::io::Error> for TupleError {
    fn from(error: std::io::Error) -> Self {
        Self(
            Default::default(),
            ohno::OhnoCoreBuilder::new().error(error).build(),
            Default::default(),
        )
    }
}
