crates/ohno_macros/src/derive_error/snapshots/ohno_macros__derive_error__from_impls__tests__tuple_struct_with_custom_field_expressions.snap
---
source: crates/ohno_macros/src/derive_error/from_impls.rs
expression: formatted
---
impl From<std::io::Error> for TupleError {
    fn from(error: std::io::Error) -> Self {
        Self(
            ohno::OhnoCoreBuilder::new().error(error).build(),
            String::from("custom"),
            42,
        )
    }
}
